[package]
name = "shopimages-convert-rs"
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
flate2 = "1.0.34"
hex = "0.4.3"
image = "0.25.2"
image_dds = "0.6.0"
ddsfile = "0.5.2"
winapi = { version = "0.3", features = ["wincon"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
